# mtga_reader

./: .gitignore  Cargo.toml
data/: Cargo.toml
data/files/: data_abilities_somehash.mtga  data_altArtCredits_somehash.mtga.optional  data_altFlavorTexts_somehash.mtga.optional  data_altPrintings_somehash.mtga.optional  data_enums_somehash.mtga  data_prompts_somehash.mtga.optional
data/src/: lib.rs  models.rs
data/src/models/: data_models.rs  output_data.rs
src/: main.rs
