[package]
name = "mtga_reader"
version = "0.1.0"
authors = ["KERNGRUPPE\\andreas.krahl <andreas.krahl@netzkern.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name="data"
path="data/src/lib.rs"


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
